# OrdDatos

./: README.md
7506TP1/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile
7506TP1/Debug/: 7506TP1  makefile
7506TP1/Debug/src/: 7506TP1.d  subdir.mk
7506TP1/src/: .cproject  7506TP1.cpp  BNode.cpp  BNode.h  BPlusTree.cpp  BPlusTree.h  BlockFileHandler.cpp  BlockFileHandler.h  Field.cpp  Field.h  FileHandler.cpp  FileHandler.h  RelationalAlgebra.cpp  RelationalAlgebra.h  TreeTest.h  VLRFileHandler.cpp  VLRFileHandler.h  VLRSerializer.cpp  VLRSerializer.h  VLRUnserializer.cpp  VLRUnserializer.h  VLRegistry.cpp  VLRegistry.h  tests.h
7506TP1/src/FileHandlers/: BlockFileHandler.cpp  BlockFileHandler.h  FileHandler.cpp  FileHandler.h  SecFileHandler.cpp  SecFileHandler.h  VLRBlockFileH.cpp  VLRBlockFileH.h  VLRFileHandler.cpp  VLRFileHandler.h  VLRSecFileH.cpp  VLRSecFileH.h
7506TP1/src/Index/: BNode.cpp  BNode.h  BPlusTree.cpp  BPlusTree.h  TreeTest.h
7506TP1/src/VLRegistries/: Field.cpp  VLRSerializer.cpp  VLRSerializer.h  VLRUnserializer.cpp  VLRUnserializer.h  VLRegistry.cpp  VLRegistry.h
